--- a/230707/012.html
+++ b/230707/012.html
@@ -5,23 +5,22 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>border</title>
+  <title></title>
   <style>
-    .box1 {
+    .box {
       width: 100px;
       height: 100px;
-      background-color: royalblue;
-      border: 10px dashed gold;
-      border-style: dashed double solid dotted;
-      border-radius: 50px 0 10px 20px;
+      border-bottom: 10px solid skyblue;
+      box-shadow: inset 0px -10px 0 0 royalblue;
+      /* opacity: 0.2; */
+      background: linear-gradient(180deg, #FF141D 0%, #00DCFF 100%);
     }
   </style>
 </head>
 
 <body>
-  <div class="box1">
-    box1
-  </div>
+  <div class="box"></div>
+
 
 </body>
 
