box-decoration add

--- a/230707/box-decoration.html
+++ b/230707/box-decoration.html
@@ -32,7 +32,7 @@
       height: 70px;
       border-radius: 70px;
       background: linear-gradient(90deg, blueviolet, royalblue);
-      border: 5px dashed lightgray;
+      outline: 5px dashed #eadbff;
       font-size: 20px;
       text-align: center;
       line-height: 70px;
