box-decoration final add

--- a/230707/box-decoration.html
+++ b/230707/box-decoration.html
@@ -31,8 +31,8 @@
       width: 150px;
       height: 70px;
       border-radius: 70px;
-      background: linear-gradient(90deg, blueviolet, royalblue);
-      outline: 5px dashed #eadbff;
+      background: linear-gradient(90deg, blueviolet, 40%, royalblue);
+      outline: 5px dashed #e6d4ff;
       font-size: 20px;
       text-align: center;
       line-height: 70px;
