230714 profile-page-update

--- a/230714/profile-page/index.html
+++ b/230714/profile-page/index.html
@@ -5,36 +5,39 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>profile-page</title>
   <link rel="stylesheet" href="./css/style.css">
+  <title>PROFILE</title>
 </head>
 
 <body>
   <div class="wrapper">
     <div class="header">
-      <img src="../images/profile03.png" alt="">
-      <h1 class="card-head">Cool River</h1>
+      <img src="./images/profile03.png" alt="프로필 사진">
+      <h1>COOL RIVER</h1>
       <p>FRONT-END ENGINEER</p>
     </div>
     <div class="content">
-      <div class="main">
+      <div class="section">
         <h2>Information</h2>
-        <ul class="information">
+        <ul>
           <li>CoolRiver</li>
-          <li>velog.io/@coo1river</li>
-          <li>Korea</li>
+          <li>veloger</li>
+          <li>@coo1river</li>
         </ul>
       </div>
-      <div class="main">
+      <div class="section skill">
         <h2>Skill</h2>
-        <ul class="skill">
+        <ul>
           <li>HTML</li>
           <li>CSS</li>
           <li>JavaScript</li>
         </ul>
       </div>
     </div>
-    <div class="footer">footer</div>
+    <div class="footer">
+      <a href="https://github.com/coo1river">Github</a>
+      <a href="https://velog.io/@coo1river">Velog</a>
+    </div>
   </div>
 </body>
 
