--- a/230706/004-slogan.html
+++ b/230706/004-slogan.html
@@ -12,7 +12,7 @@
 <body>
 
   <div class="main">
-    <h1>황시하😄</h1>
+    <h1>COOLRIVER</h1>
     <h2>인생의 슬로건</h2>
     <p class="slogan">흘러가는 대로 살자🌊</p>
 
