--- a/230712/card/index.html
+++ b/230712/card/index.html
@@ -10,32 +10,160 @@
 </head>
 
 <body>
-  <article>
-    <div class="card">
-      <div class="card-header">
-        <img class="profile-image" src="./images/profile1.png" alt="">
-        <div class="profile">
-          <h3>그것을 피가 청춘을 것이다</h3>
-          <p>secondary</p>
-        </div>
-      </div>
-      <img class="main-img" src="./images/card-img4.png" alt="">
-      <p class="content">청춘의 하였으며, 이것은 몸이 때문이다. 사는가 고동을 용기가 충분히 청춘 것이다. 얼마나 반짝이는 소담스운 열락의 아름다우냐? 가지에 같지 청춘의 옷을 목숨을
-        피어나기
-        오직 군영과 칼이다. 거친
-        끓는 예가 뿐이다. 방지하는 꽃이 청춘을 생명을 이것이다. 인간의 거선의 피고, 모래뿐일 작고 우리 평화스러운 있는가?</p>
-      <div class="card-footer">
-        <a class="read" href="#">Read
-          <img class="read-btn" src="./images/Vector 7.svg" alt="">
-        </a>
-        <div class="btn">
-          <img src="./images/icon-heart.svg" alt="좋아요">
-          <img src="./images/icon-share.svg" alt="공유">
-          <img src="./images/icon-more.svg" alt="더보기">
-        </div>
-      </div>
-  </article>
 
+  <section class="card-list">
+    <article>
+      <div class="card">
+        <div class="card-header">
+          <img class="profile-image" src="./images/profile1.png" alt="">
+          <div class="profile">
+            <h3>그것을 피가 청춘을 것이다</h3>
+            <p>secondary</p>
+          </div>
+        </div>
+        <img class="main-img" src="./images/card-img4.png" alt="">
+        <p class="content">청춘의 하였으며, 이것은 몸이 때문이다. 사는가 고동을 용기가 충분히 청춘 것이다. 얼마나 반짝이는 소담스운 열락의 아름다우냐? 가지에 같지 청춘의 옷을 목숨을
+          피어나기
+          오직 군영과 칼이다. 거친
+          끓는 예가 뿐이다. 방지하는 꽃이 청춘을 생명을 이것이다. 인간의 거선의 피고, 모래뿐일 작고 우리 평화스러운 있는가?</p>
+        <div class="card-footer">
+          <a class="read" href="#">Read
+            <img class="read-btn" src="./images/Vector 7.svg" alt="">
+          </a>
+          <div class="btn">
+            <img src="./images/icon-heart.svg" alt="좋아요">
+            <img src="./images/icon-share.svg" alt="공유">
+            <img src="./images/icon-more.svg" alt="더보기">
+          </div>
+        </div>
+    </article>
+
+    <article>
+      <div class="card">
+        <div class="card-header">
+          <img class="profile-image" src="./images/profile1.png" alt="">
+          <div class="profile">
+            <h3>그것을 피가 청춘을 것이다</h3>
+            <p>secondary</p>
+          </div>
+        </div>
+        <img class="main-img" src="./images/card-img4.png" alt="">
+        <p class="content">청춘의 하였으며, 이것은 몸이 때문이다. 사는가 고동을 용기가 충분히 청춘 것이다. 얼마나 반짝이는 소담스운 열락의 아름다우냐? 가지에 같지 청춘의 옷을 목숨을
+          피어나기
+          오직 군영과 칼이다. 거친
+          끓는 예가 뿐이다. 방지하는 꽃이 청춘을 생명을 이것이다. 인간의 거선의 피고, 모래뿐일 작고 우리 평화스러운 있는가?</p>
+        <div class="card-footer">
+          <a class="read" href="#">Read
+            <img class="read-btn" src="./images/Vector 7.svg" alt="">
+          </a>
+          <div class="btn">
+            <img src="./images/icon-heart.svg" alt="좋아요">
+            <img src="./images/icon-share.svg" alt="공유">
+            <img src="./images/icon-more.svg" alt="더보기">
+          </div>
+        </div>
+    </article>
+    <article>
+      <div class="card">
+        <div class="card-header">
+          <img class="profile-image" src="./images/profile1.png" alt="">
+          <div class="profile">
+            <h3>그것을 피가 청춘을 것이다</h3>
+            <p>secondary</p>
+          </div>
+        </div>
+        <img class="main-img" src="./images/card-img4.png" alt="">
+        <p class="content">청춘의 하였으며, 이것은 몸이 때문이다. 사는가 고동을 용기가 충분히 청춘 것이다. 얼마나 반짝이는 소담스운 열락의 아름다우냐? 가지에 같지 청춘의 옷을 목숨을
+          피어나기
+          오직 군영과 칼이다. 거친
+          끓는 예가 뿐이다. 방지하는 꽃이 청춘을 생명을 이것이다. 인간의 거선의 피고, 모래뿐일 작고 우리 평화스러운 있는가?</p>
+        <div class="card-footer">
+          <a class="read" href="#">Read
+            <img class="read-btn" src="./images/Vector 7.svg" alt="">
+          </a>
+          <div class="btn">
+            <img src="./images/icon-heart.svg" alt="좋아요">
+            <img src="./images/icon-share.svg" alt="공유">
+            <img src="./images/icon-more.svg" alt="더보기">
+          </div>
+        </div>
+    </article>
+    <article>
+      <div class="card">
+        <div class="card-header">
+          <img class="profile-image" src="./images/profile1.png" alt="">
+          <div class="profile">
+            <h3>그것을 피가 청춘을 것이다</h3>
+            <p>secondary</p>
+          </div>
+        </div>
+        <img class="main-img" src="./images/card-img4.png" alt="">
+        <p class="content">청춘의 하였으며, 이것은 몸이 때문이다. 사는가 고동을 용기가 충분히 청춘 것이다. 얼마나 반짝이는 소담스운 열락의 아름다우냐? 가지에 같지 청춘의 옷을 목숨을
+          피어나기
+          오직 군영과 칼이다. 거친
+          끓는 예가 뿐이다. 방지하는 꽃이 청춘을 생명을 이것이다. 인간의 거선의 피고, 모래뿐일 작고 우리 평화스러운 있는가?</p>
+        <div class="card-footer">
+          <a class="read" href="#">Read
+            <img class="read-btn" src="./images/Vector 7.svg" alt="">
+          </a>
+          <div class="btn">
+            <img src="./images/icon-heart.svg" alt="좋아요">
+            <img src="./images/icon-share.svg" alt="공유">
+            <img src="./images/icon-more.svg" alt="더보기">
+          </div>
+        </div>
+    </article>
+    <article>
+      <div class="card">
+        <div class="card-header">
+          <img class="profile-image" src="./images/profile1.png" alt="">
+          <div class="profile">
+            <h3>그것을 피가 청춘을 것이다</h3>
+            <p>secondary</p>
+          </div>
+        </div>
+        <img class="main-img" src="./images/card-img4.png" alt="">
+        <p class="content">청춘의 하였으며, 이것은 몸이 때문이다. 사는가 고동을 용기가 충분히 청춘 것이다. 얼마나 반짝이는 소담스운 열락의 아름다우냐? 가지에 같지 청춘의 옷을 목숨을
+          피어나기
+          오직 군영과 칼이다. 거친
+          끓는 예가 뿐이다. 방지하는 꽃이 청춘을 생명을 이것이다. 인간의 거선의 피고, 모래뿐일 작고 우리 평화스러운 있는가?</p>
+        <div class="card-footer">
+          <a class="read" href="#">Read
+            <img class="read-btn" src="./images/Vector 7.svg" alt="">
+          </a>
+          <div class="btn">
+            <img src="./images/icon-heart.svg" alt="좋아요">
+            <img src="./images/icon-share.svg" alt="공유">
+            <img src="./images/icon-more.svg" alt="더보기">
+          </div>
+        </div>
+    </article>
+    <article>
+      <div class="card">
+        <div class="card-header">
+          <img class="profile-image" src="./images/profile1.png" alt="">
+          <div class="profile">
+            <h3>그것을 피가 청춘을 것이다</h3>
+            <p>secondary</p>
+          </div>
+        </div>
+        <img class="main-img" src="./images/card-img4.png" alt="">
+        <p class="content">청춘의 하였으며, 이것은 몸이 때문이다. 사는가 고동을 용기가 충분히 청춘 것이다. 얼마나 반짝이는 소담스운 열락의 아름다우냐? 가지에 같지 청춘의 옷을 목숨을
+          피어나기
+          오직 군영과 칼이다. 거친
+          끓는 예가 뿐이다. 방지하는 꽃이 청춘을 생명을 이것이다. 인간의 거선의 피고, 모래뿐일 작고 우리 평화스러운 있는가?</p>
+        <div class="card-footer">
+          <a class="read" href="#">Read
+            <img class="read-btn" src="./images/Vector 7.svg" alt="">
+          </a>
+          <div class="btn">
+            <img src="./images/icon-heart.svg" alt="좋아요">
+            <img src="./images/icon-share.svg" alt="공유">
+            <img src="./images/icon-more.svg" alt="더보기">
+          </div>
+        </div>
+    </article>
+  </section>
 
 </body>
 
