--- a/230713/table.html
+++ b/230713/table.html
@@ -10,15 +10,14 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700&display=swap" rel="stylesheet">
   <style>
-    body {
-      margin: 30px 80px;
-    }
-
     table {
       font-family: "Noto Sans KR";
-      width: 100%;
       border-collapse: collapse;
       border: 3px solid black;
+
+      /* 너비 값 고정 */
+      table-layout: fixed;
+      width: 100%;
     }
 
 
