--- a/diary/login.html
+++ b/diary/login.html
@@ -22,27 +22,27 @@
     </div>
   </header>
 
-  <main>
-    <h2 class="login max-width">
+  <main class="max-width">
+    <h2 class="login">
       <img src="./img/logo.svg" alt="두근두근 비밀일기">
       <strong>로그인</strong>
     </h2>
 
-    <form>
+    <form class="login-form">
       <div>
-        <label for="user-email"></label>
+        <label for="user-email">이메일</label>
         <input id="user-email" type="email">
       </div>
       <div>
-        <label for="user-pw"></label>
+        <label for="user-pw">비밀번호</label>
         <input id="user-pw" type="password">
       </div>
-      <button type="submit">로그인</button>
+      <button class="login-btn" type="submit">로그인</button>
     </form>
 
   </main>
   <footer>
-    <p>Copyright 2023. WENIV All rights reserved.</p>
+    <p class="footer">Copyright 2023. WENIV All rights reserved.</p>
   </footer>
 </body>
 
