my charcter update

--- a/character/character.html
+++ b/character/character.html
@@ -10,7 +10,13 @@
 </head>
 
 <body>
+
   <div class="main">
+    <div class="text">
+      <p>
+        눈과 입을 눌러 보세요
+      </p>
+    </div>
     <div class="ears">
       <div class="ear left">
         <div class="inside-ear left"></div>
@@ -21,7 +27,6 @@
     </div>
 
     <div class="face">
-
       <div class="brows">
         <div class="brow left">
           <img src="./img/left-brow.png" alt="왼쪽눈썹">
@@ -40,12 +45,22 @@
           <div class="pupil1 right"></div>
           <div class="pupil2 right"></div>
         </div>
-
       </div>
+
       <div class="inside-face">
         <div class="nose"></div>
-        <div class="mouth"></div>
+        <div class="mouth">
+          <img src="./img/mouth.png" alt="">
+          <img src="./img/tongue.png" alt="">
+        </div>
       </div>
+
+
+
+    </div>
+    <div class="cheeks">
+      <div class="cheek left"></div>
+      <div class="cheek right"></div>
     </div>
   </div>
 </body>
