--- a/230721/index.html
+++ b/230721/index.html
@@ -20,7 +20,7 @@
     <div class="content">
       <div>Travel all around the world</div>
       <div>Learn a new language
-        <img src="./challenges2/images/Frame.png" alt="">
+        <img src="./img/Frame.png" alt="">
       </div>
       <div>Try a profession in a different field</div>
       <div>Achieve your ideal weight</div>
