--- a/Tailwind/009_reume.htm
+++ b/Tailwind/009_reume.htm
@@ -8,53 +8,96 @@
 </head>
 
 <body class="bg-gray-200">
-  <div class="rounded-2xl bg-orange-200 border-4rounded-2xl shadow-md">
-    <header class="gap-5 mx-5 flex justify-center items-center">
+  <div class=" rounded-2xl bg-orange-200 border-4rounded-2xl shadow-md p-5">
+    <header class="gap-5 mx-5 flex justify-center items-center p-2">
       <div class="w-1/3">
         <img class="w-40 m-auto" src="./호빵맨.png" alt="">
       </div>
       <div class="flex flex-col w-2/3">
-        <h1 class="text-4xl bg-orange-400 rounded-2xl text-white font-bold">
+        <h1 class="text-4xl bg-orange-400 rounded-2xl text-white font-bold p-2">
           hobbang<span class="text-orange-700">.man</span>
         </h1>
-        <span class="text-sm">Frontend Developer Student</span>
+        <span class="text-s ml-2 text-gray-700">Front-end Developer Student</span>
       </div>
     </header>
 
     <div class="flex m-5 gap-5">
-      <aside class="w-1/3 rounded-2xl bg-white">
-        <h2 class="text-3xl bg-orange-400 rounded-2xl text-white">Details</h2>
+      <aside class="w-1/3 rounded-2xl bg-white space-y-4 space-x-3 p-2">
+        <h2 class="text-3xl bg-orange-400 rounded-2xl text-white font-bold p-2">Details</h2>
         <div>
-          <h3 class="text-xl">Github</h3>
-          <a class="text-gray-500" href="https://github.com/coo1river">github.com/coo1river</a>
+          <h3 class="font-bold text-2xl text-orange-500">Github</h3>
+          <a class="text-gray-500 text-sm break-all" href="https://github.com/coo1river">github.com/coo1river</a>
+          <h3 class="font-bold text-2xl text-orange-500">Velog</h3>
+          <a class="text-gray-500 text-sm break-all" href="https://velog.io/@coo1river">velog.io/@coo1river</a>
         </div>
         <div>
-          <h3 class="text-xl">Github</h3>
-          <a href="">주소</a>
+          <h3 class="font-bold text-2xl text-orange-500">Pick Project</h3>
+          <p class="text-gray-500 text-sm">
+          <ul class="p-5 text-gray-500 text-sm list-disc">
+            <li>My Charcter</li>
+            <li>Secret Diary</li>
+            <li>Vending Machine</li>
+          </ul>
+          </p>
         </div>
         <div>
-          <h3 class="text-xl">Github</h3>
-          <a href="">주소</a>
+          <h3 class="font-bold text-2xl text-orange-500">Skill</h3>
+          <ul class="p-5 text-gray-500 text-sm list-disc">
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JavaScript</li>
+          </ul>
         </div>
       </aside>
 
-      <main class="w-2/3 rounded-2xl bg-white">
-        <div>
-          <h2 class="text-3xl bg-orange-400 rounded-2xl text-white">Profile</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis, quae facilis velit nesciunt in nobis
-            magnam
-            perspiciatis provident rerum impedit amet ducimus corrupti modi quam assumenda dolor odio corporis.
-            Perferendis!
-          </p>
-        </div>
+      <main class="w-2/3 rounded-2xl bg-white space-x-3 space-y-4 p-2">
+        <h2 class="text-3xl bg-orange-400 rounded-2xl text-white font-bold p-3">Main</h2>
+        <h3 class="font-bold text-2xl text-orange-500">Profile</h3>
+        <p class="text-gray-500 text-sm">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis, quae
+          facilis velit
+          nesciunt in nobis
+          magnam
+          perspiciatis provident rerum impedit amet ducimus corrupti modi quam assumenda dolor odio corporis.
+          Perferendis!
+        </p>
 
-        <div>
-          <h2>Profile</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis, quae facilis velit nesciunt in nobis
+        <div class="space-y-4">
+          <h3 class="font-bold text-2xl text-orange-500">Project History</h3>
+          <div class="font-normal">Front-end School 7</div>
+          <span class="text-sm text-gary-300">2023.07.03 ~ </span>
+          <p class="text-gray-500 text-sm">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis, quae
+            facilis velit nesciunt in nobis
             magnam
             perspiciatis provident rerum impedit amet ducimus corrupti modi quam assumenda dolor odio corporis.
             Perferendis!
           </p>
+          <div class="font-normal">Front-end School 7</div>
+          <p class="text-gray-500 text-sm">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis, quae
+            facilis velit nesciunt in nobis
+            magnam
+            perspiciatis provident rerum impedit amet ducimus corrupti modi quam assumenda dolor odio corporis.
+            Perferendis!
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Modi illum ipsa tenetur ut quasi. Minus voluptate
+            repudiandae, labore cum ipsa alias, et aperiam ipsum magnam veritatis molestiae earum? Impedit,
+            perspiciatis?
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur iste excepturi quas nostrum quaerat
+            magnam aut. Incidunt, quibusdam? Nam consectetur sequi repellat quos soluta quam dignissimos beatae
+            laudantium laborum eaque!
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magni similique vel nisi optio quaerat adipisci in
+            sit, dignissimos ullam, mollitia aperiam autem nesciunt consectetur pariatur rem molestias vero perspiciatis
+            alias.
+            Veritatis tempore maxime facere adipisci voluptas modi et libero accusantium tenetur, id earum ad dolores
+            quaerat fugiat asperiores sit velit nemo neque perspiciatis exercitationem sint. Ab exercitationem quas
+            repudiandae dolor.
+          </p>
+          <div class="font-normal">Front-end School 7</div>
+          <p class="text-gray-500 text-sm">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis, quae
+            facilis velit nesciunt in nobis
+            magnam
+            perspiciatis provident rerum impedit amet ducimus corrupti modi quam assumenda dolor odio corporis.
+            Perferendis!
+          </p>
+
         </div>
       </main>
     </div>
