--- a/230725/004.html
+++ b/230725/004.html
@@ -13,6 +13,7 @@
   <div class="login">
     <header>
       <h1>로그인 또는 회원가입</h1>
+      <button class="close-btn" type="button"></button>
     </header>
 
     <section class="section-login">
@@ -26,9 +27,9 @@
           <input id="user-pw" type="password" placeholder="비밀번호">
       </div>
 
-      <div class="lg-continue">
-        <input id="check-btn" type="checkbox">
-        <label for="check-btn">
+      <div>
+        <input class=txt-hide id="check-btn" type="checkbox">
+        <label class="lg-continue" for="check-btn">
           로그인 상태 유지
         </label>
       </div>
@@ -38,10 +39,10 @@
 
       <div class="join_find">
         <div class="join">
-          <p>회원가입</p>
-          <p>아이디/비밀번호 찾기</p>
+          <a href="#">회원가입</a>
+          <a href="#">아이디/비밀번호 찾기</a>
         </div>
-        <p>또는</p>
+        <p class="or">또는</p>
       </div>
 
       <div class="other-login">
