--- a/React/230906/practice.html
+++ b/React/230906/practice.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title></title>
+  <title>React Example</title>
   <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
   <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
   <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
@@ -14,23 +14,85 @@
 <body>
   <div id="root"></div>
   <script type="text/babel">
-    const header = <div></div>;
-    const h1 = <h1>hello world shop</h1>
-    const nav = <nav></nav>
-    const ul = <ul></ul>
-    const li = <li></li>
-    const main = <main></main>
-    const h2 = <h2>hello world!</h2>
-    const p = <p>product list</p>
+
+    function Header(menuOne, menuTwo) {
+      return (
+        <div>header
+          <div>menu</div>
+          <div>{menuOne}</div>
+          <div>{menuTwo}</div>
+        </div>
+      )
+    }
+
+    function Main({ name, age }) {
+      console.log(name, age);
+      return (
+        <div>main
+          <h1>hello {name}</h1>
+          <p>hello {age}</p>
+        </div>
+      )
+    }
+
+    const LiList = () => {
+      let arr = [];
+      for (let i = 1; i <= 10; i++) {
+        arr.push(`best seller 옷${i}`)
+      }
+      return arr;
+    }
+
+    const LinkList = () => {
+      let arr = [];
+      for (let i = 1; i <= 5; i++) {
+        arr.push(`링크${i}`)
+      }
+      return arr;
+    }
+
+    // const Header = (
+    //   <header>
+    //     <h1>hello world shop</h1>
+    //     <nav>
+    //       <ul>
+    //         {
+    //           LinkList().map(x => <li>{x}</li>)
+    //         }
+    //       </ul>
+    //     </nav>
+    //   </header>
+    // );
+
+    const Product = (
+      <main>
+        <h2>hello world!</h2>
+        <p>product list</p>
+        <ul>
+          {
+            LiList().map(x => <li>{x}</li>)
+          }
+        </ul>
+      </main>
+    );
+
+    const Footer = (
+      <footer>
+        <h2>hello footer!</h2>
+        <address>제주시 인다 1길</address>
+      </footer>
+    );
 
     const body = (
       <div>
-        {header}
-        {h1}
-        {nav}
-
+        {Header('about', 'product')}
+        <Main name="hojun" age="10" />
       </div>
-    )
+    );
+
+    const domContainer = document.querySelector('#root');
+    const root = ReactDOM.createRoot(domContainer);
+    root.render(body);
   </script>
 </body>
 
